@@ -1,3 +1,8 @@
+2004-07-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* library/tkfbox.tcl (::tk::dialog::file::Create): Watch out for
+	users destroying the dialog indirectly. [Bug 987169] 
+
 2004-07-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/canvas.n: Add paragraph to make clearer what is going on
